# srajob

./: .env  .env.example  .gitignore  AGENTS.md  README.md  WARP.md  local-app.ps1  mise.toml  netlify.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
.windsurf/rules/: WARP.md  rules.md
docker/temporal/: Dockerfile.temporal-dev  docker-compose.yml  query-ghcr.ps1  start-podman.ps1  stop-podman.ps1
form_filler_2/: human_typing_patch.py  main.py  openrouter_llm.py  serve_test_pages.py  simple.py
form_filler_2/prompt/: fill_form_based_resume.py
form_filler_bot/: README.md  __init__.py  bot.py  browser_adapters.py  cli.py  html_fields.py  planner.py  resume_loader.py
form_filler_bot/samples/: resume.sample.yaml
form_filler_bot/scripts/: fetch_test_pages.ps1  test_datadog_fill.ps1
form_filler_bot/test_pages/: README.txt  datadog_form_sample.html  datadog_job_7073137.html  datadog_job_7073137_app.html  plan.json  plan.live.json  plan.sample.json
job_board_application/: AGENTS.md  README.md  capsule-notes.md  index.html  package.json  setup.mjs  vite-output.txt  vite.config.ts
job_board_application/convex/: crons.ts  formFiller.ts  jobs.ts  router.ts  schema.ts  seedData.ts  sites.ts
job_board_application/scripts/: sync-env.mjs
job_board_application/src/: AdminPage.tsx  App.tsx  JobBoard.tsx  JobBoard_clean.tsx  PublicJobPreview.tsx  index.css  main.tsx
job_scrape_application/scraper-worker/: __main__.py  constants.py  quicktests.py
job_scrape_application/workflows/: README.md  __init__.py  activities.py  ai_form_activities.py  config.py  create_schedule.py  demo_workflow.py  form_fill_workflow.py  run_demo.py  scrape_workflow.py  temporal_health_check.py  temporal_real_server_check.py  test_workflow.py  worker.py
scripts/: deploy-netlify.ps1  init-env.ps1  local-app.ps1  queue-ai.ps1  run-tests.ps1  test_lease_complete.out.txt  test_lease_complete.py
tests/: test_ai_form_normalization.py  test_datadog_cities_field.py  test_datadog_llm_overrides.py  test_form_filler_bot_datadog.py  test_lease_complete_unit.py  test_tricky_form_flow.py
theorycraft-form/: SCRIPTS.md  ai-form.py  main.py
(+19 files in other folders)
