[project]
name = "srajob"
version = "0.1.0"
description = "A modern web scraping library using uv for package management"
readme = "README.md"
authors = [
    { name = "matchaboar", email = "matchaboar@email.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.7.3",
    "fetchfox-sdk>=1.0.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "temporalio==1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
ai = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
